--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 :root{
-  --black: 15, 15, 15;
+  --black: 17, 17, 17;
+  --light-black: 34, 34, 34;
   --white: 247, 247, 247;
+  --accent: 234, 76, 137;
 }
 
 body, html, #__next{
@@ -10,11 +12,12 @@ body, html, #__next{
   padding: 0px;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 110%;
+  background: rgb(var(--black))
 }
 
 #__next{
-  background: rgb(var(--black)) url(/wireframe.png);
+  background-image:  url(/wireframe.png);
   background-size: 170px;
   display: grid;
   place-items: center;
