--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700;900&family=Roboto+Mono:wght@500&display=swap');
+
+/* font-family: 'Raleway', sans-serif;
+font-family: 'Roboto Mono', monospace; */
+
 
 :root{
   --black: 17, 17, 17;
