--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Karla:wght@400;500;700&display=swap");
+
 :root {
   --pale-green: 232, 245, 226;
-  --black: 0,0,0;
+  --black: 0, 0, 0;
 }
 
 html {
@@ -12,7 +14,8 @@ html {
   font-size: 16px;
 }
 
-body, #root {
+body,
+#root {
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -24,4 +27,23 @@ body, #root {
   opacity: 1;
   background-image: radial-gradient(#000000 1px, rgb(var(--pale-green)) 1px);
   background-size: 20px 20px;
+}
+
+h1 {
+  font-family: "Karla", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 48px;
+  color: rgb(var(--black));
+}
+
+h6 {
+  font-family: "JetBrains Mono", monospace;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(var(--black));
 }
