--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,11 @@
 }
 
 .App section {
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
+
   max-width: 39ch;
-  max-height: 36rem;
+  max-height: 39rem;
   background: rgb(var(--pale-green));
   padding: 1.25rem 1rem;
   box-sizing: border-box;
@@ -32,8 +33,6 @@
 .App section img {
   height: auto;
   width: 100%;
-  bottom: 0;
-  right: 0;
 }
 
 .App section .text {
@@ -41,6 +40,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
+  z-index: 1;
 }
 
 .App section .text h6 {
@@ -64,4 +64,31 @@
 
 .App section .text h1 {
   margin: 1.25rem 0px;
+}
+
+@media screen and (min-width: 658px) {
+  .App section {
+    width: 100%;
+    height: 100%;
+    max-width: 90ch;
+    max-height: 36rem;
+    position: relative;
+    box-sizing: border-box;
+  }
+
+  .App section .text {
+    position: absolute;
+    top: 8ch;
+    left: 8ch;
+    width: 60ch;
+    height: 15.5rem;
+  }
+
+  .App section img {
+    height: 20.625rem;
+    width: auto;
+    position: absolute;
+    bottom: 20px;
+  right: 20px;
+  }
 }
