--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Karla:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300family=Karla:wght@300;400&display=swap');
+
+/* font-family: 'JetBrains Mono', monospace;
+font-family: 'Karla', sans-serif; */
 
 :root {
   --pale-green: 232, 245, 226;
   --black: 0, 0, 0;
+
+  --wheat :255, 240, 229;
 }
 
 html {
@@ -22,3 +27,7 @@ body, #__next {
 }
 
 
+#Home, #About, #Projects, #Resume {
+  background: pink;
+  height: 100vh;
+}
