--- a/styles/Components/Navbar.module.css
+++ b/styles/Components/Navbar.module.css
@@ -8,13 +8,15 @@
   align-items: flex-end;
   padding: 0px calc((100% - 1200px) / 2);
   padding-bottom: 15px;
+
+  position: absolute;
   /* padding: 0px; */
 }
 
 .Brand {
   width: 152.94px;
   height: 54px;
-  background-image: url("/brand-large.svg");
+  background-image: url("/brand-large.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -28,6 +30,14 @@
   height: fit-content;
 }
 
+.FadeOut {
+  display: none;
+}
+
+.NavbarToggle {
+  display: none;
+}
+
 .NavLink {
   text-decoration: none;
   font-family: "Karla", sans-serif;
@@ -38,46 +48,107 @@
   line-height: 22px;
   letter-spacing: -0.5px;
 
-  padding-bottom: 5px;
   display: inline-block;
   position: relative;
   color: rgb(var(--black));
-
 }
 
-.NavLink::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(var(--black));
-  
-    transform-origin: bottom center;
-    transition: transform 0.25s ease-out; 
+.NavLink::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+
+  background-color: rgb(var(--black));
+
+  transform-origin: bottom center;
+  transition: transform 0.25s ease-out;
 }
 
-.NavLink:hover::after{
-    transform: scaleX(1);
-    transform-origin: bottom center;
-  
+.NavLink:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom center;
 }
-
 
 @media only screen and (max-width: 1200px) {
-    .Navbar{
-        padding: 0px 15px;
-        padding-bottom: 15px;
-
-    }
+  .Navbar {
+    padding: 0px 15px;
+    padding-bottom: 15px;
+  }
 }
 
 @media only screen and (max-width: 575px) {
-    .Navbar{
-        padding: 0px 15px;
-        padding-bottom: 15px;
+  .Navbar {
+    width: 100%;
+    height: 55px;
+    top: 16px;
+    padding: 0px 16px;
+    box-sizing: border-box;
+    align-items: center;
+  }
 
-    }
+  .Brand {
+    width: 55px;
+    height: 55px;
+    background-image: url("/brand.png");
+  }
+
+  .NavbarToggle {
+    display: block;
+    height: 23px;
+    width: 30px;
+    background-image: url("/toggle.png");
+  }
+
+  .NavbarToggle:hover {
+    cursor: pointer;
+  }
+
+  .NavbarDisplayTrue {
+    display: block;
+  }
+
+  .NavbarDisplayFalse {
+    display: none !important;
+  }
+
+  .FadeOut {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    opacity: 0.5;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+  }
+
+
+  .NavbarNav {
+    background: rgb(var(--white));
+    position: fixed;
+    right: 0px;
+    bottom: -16px;
+    height: 100vh;
+    width: 80%;
+    max-width: 325px;
+    box-shadow: 5px 10px black;
+    text-align: right;
+    padding: 32px;
+    box-sizing: border-box;
+    z-index: 999; 
+  }
+
+  .NavLink {
+    font-family: "Karla", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 33px;
+    line-height: 39px;
+    margin-bottom: 38px;
+  }
 }
