Added boat image

--- a/styles/Components/Navbar.module.css
+++ b/styles/Components/Navbar.module.css
@@ -9,7 +9,7 @@
   padding: 0px calc((100% - 1200px) / 2);
   padding-bottom: 15px;
 
-  position: absolute;
+  position: fixed;
   /* padding: 0px; */
 }
 
