--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,10 @@
-.Main {
+.HomeSection {
+    padding: 120px;
+    height: 900px;
+    width: 100vw;
     background: rgb(var(--wheat));
-    min-height: 100%;
-    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
