--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,43 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Karla:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Karla:wght@100;200;300;400;500;600;700&display=swap");
 
 :root {
   --pale-green: 232, 245, 226;
   --black: 0, 0, 0;
-  --beige: 255, 240, 229,
+  --beige: 255, 240, 229;
+  --saphire-blue: 16, 22, 47;
 }
 
-html {
+html,body, #__next {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   min-height: 100%;
   margin: 0px;
   padding: 0px;
   font-size: 16px;
 }
 
-body, #__next {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-}
-
-
-h1 {
-  font-family: "Karla", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 48px;
-  color: rgb(var(--black));
-}
-
-h6 {
-  font-family: "JetBrains Mono", monospace;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: rgb(var(--black));
-}
