--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 html,body, #__next {
   width: 100%;
-  height: fit-content;
+  height: 100%;
   min-height: 100%;
   margin: 0px;
   padding: 0px;
