--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -1,1 +1,65 @@
+.Navbar {
+    width: 100%;
+    padding: 45px 120px 0px 120px ;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
+}
+
+.LogoDesktop {
+    display: block;
+}
+
+
+.LogoMobile {
+    display: none;
+}
+
+.Links {
+    height: 22px;
+    width: 344px;
+
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.NavLink {
+    font-family: 'Karla', sans-serif;
+    text-decoration: none;
+    color: black;
+    width: fit-content;
+}
+
+.NavLink:hover {
+    border-bottom: 1px solid black;
+}
+
+.SideBar {
+    display: none;
+}
+
+@media screen and (width  < 765px) {
+    .Links {
+        display: none;
+    }
+
+    .LogoDesktop {
+        display: none;
+    }
+    
+    
+    .LogoMobile {
+        display: block;
+    }
+
+    .SideBar {
+        display: block;
+    }
+    
+}
