--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -1,65 +1,77 @@
 .Navbar {
-    width: 100%;
-    padding: 45px 120px 0px 120px ;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .LogoDesktop {
-    display: block;
+  display: block;
 }
 
-
 .LogoMobile {
-    display: none;
+  display: none;
 }
 
 .Links {
-    height: 22px;
-    width: 344px;
+  height: 22px;
+  width: 344px;
 
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .NavLink {
-    font-family: 'Karla', sans-serif;
-    text-decoration: none;
-    color: black;
-    width: fit-content;
+  font-family: "Karla", sans-serif;
+  text-decoration: none;
+  color: black;
+  width: fit-content;
 }
 
 .NavLink:hover {
     border-bottom: 1px solid black;
 }
 
+.SideBarIcon {
+  display: none;
+}
+
 .SideBar {
     display: none;
 }
 
-@media screen and (width  < 765px) {
-    .Links {
-        display: none;
-    }
+@media screen and (width < 600px) {
+  .Navbar {
+    padding: 16px 16px 0px 16px;
+  }
 
-    .LogoDesktop {
-        display: none;
-    }
-    
-    
-    .LogoMobile {
-        display: block;
-    }
+  .Links {
+    display: none;
+  }
 
-    .SideBar {
-        display: block;
-    }
-    
+  .LogoDesktop {
+    display: none;
+  }
+
+  .LogoMobile {
+    display: block;
+  }
+
+  .SideBarIcon {
+    display: block;
+  }
+
 }
