--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -1,7 +1,6 @@
 .Navbar {
   width: 100%;
-  max-width: 1200px;
-  padding: 20px;
+  padding: 20px 50px;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -15,6 +14,7 @@
   margin-left: auto;
   margin-right: auto;
 
+  z-index: 99;
 }
 
 .LogoDesktop {
