--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -11,11 +11,24 @@
   top: 0px;
   left: 0px;
   right: 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px auto;
 
-  z-index: 99;
+  z-index: 10;
+
 }
+
+.Navbar.Light {
+  background: #FFF0E5;
+  box-shadow: 1px 1px 1px black;
+
+}
+
+.Navbar.Dark {
+  background: #10162f;
+  box-shadow: 1px 1px 1px #47cca0;
+
+}
+
 
 .LogoDesktop {
   display: block;
@@ -40,6 +53,38 @@
   font-family: "Karla", sans-serif;
   text-decoration: none;
   width: fit-content;
+  position: relative;
+}
+
+.NavLink.Dark::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1.5px;
+  bottom: -4px;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.NavLink.Light::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1.5px;
+  bottom: -4px;
+  left: 0;
+  background-color: #47cca0;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+
+.NavLink:hover::before {
+  transform: scaleX(1);
 }
 
 .NavLink.Dark {
@@ -48,14 +93,6 @@
 
 .NavLink.Light {
   color: #47cca0;
-}
-
-.NavLink:hover {
-    border-bottom: 2px solid black;
-}
-
-.NavLink.Light:hover {
-  border-bottom-color: #47cca0;
 }
 
 .SideBarIcon {
@@ -68,7 +105,7 @@
 
 @media screen and (width < 600px) {
   .Navbar {
-    padding: 20px 20px 0px 20px;
+    padding: 20px 20px 20px 20px;
   }
 
   .Links {
