--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,13 @@
 
     box-sizing: border-box;
     scroll-snap-type: y mandatory;
-    overflow-y: scroll; 
+    overflow-y: hidden; 
     overflow-x: hidden; 
   
 }
 
 .Main > article {
-    min-height: 99vh;
+    min-height: 100vh;
     height: fit-content;
     width: 100%;
 
@@ -25,7 +25,6 @@
     box-sizing: border-box;
     height: fit-content;
     position: relative;
-    overflow: scroll;
     
     clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
     scroll-snap-align: 0px;
