--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,9 +20,10 @@ html,body, #__next {
   padding: 0px;
   font-size: 16px;
   box-sizing: border-box;
+  
 }
 
 body {
-  overflow: overlay;
+  overflow: hidden;
 
 }
