--- a/styles/sections/Welcome.module.css
+++ b/styles/sections/Welcome.module.css
@@ -7,6 +7,7 @@
 
   display: grid;
   place-items: center;
+
 }
 
 .Welcome > section {
@@ -81,6 +82,7 @@
 .ContactInfo {
   height: fit-content;
   width: fit-content;
+  margin-top: 30px;
 }
 
 .ContactInfo p {
@@ -90,6 +92,7 @@
   font-weight: 400;
   line-height: 40px;
   height: fit-content;
+  margin-bottom: -5px;
 }
 
 .ContactList {
@@ -242,11 +245,58 @@
 
 @media screen and (width < 1330px) {
   .Overview {
-    width: 43%;
+    width: 49%;
   }
+  
+  .Overview p {
+    font-size: 22px;
+    font-style: normal;
+    line-height: 16px;
+    width: fit-content;
+    height: fit-content;
+  }
+
+  .Overview h1 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px;
+
+    height: fit-content;
+  }
+
+  .Overview h2 {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 39px;
+
+    width: fit-content;
+  }
+
+  .Overview .Description {
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 23px;
+    margin: 10px 0px;
+
+    height: fit-content;
+  }
+
+  .ContactList {
+    display: inline-flex;
+    flex-wrap: wrap;
+    height: fit-content;
+    gap: 15px ;
+    justify-content: flex-start;
+    width: 100%;
+  }
+
+
 }
 
-@media screen and (width < 750px) {
+@media screen and (width < 792px) {
   .Welcome {
     height: fit-content;
   }
@@ -291,58 +341,10 @@
     top: 1vw;
     right: 1vw;
   }
-}
-
-@media screen and (width < 600px) {
+  
   .Welcome > section {
     flex-direction: column;
     width: 90%;
     left: 0px;
-  }
-
-  .Overview p {
-    font-size: 22px;
-    font-style: normal;
-    line-height: 16px;
-    width: fit-content;
-    height: fit-content;
-  }
-
-  .Overview h1 {
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 48px;
-
-    height: fit-content;
-  }
-
-  .Overview h2 {
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 39px;
-
-    width: fit-content;
-  }
-
-
-  .Overview .Description {
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 23px;
-    margin: 10px 0px;
-
-    height: fit-content;
-  }
-
-  .ContactList {
-    display: inline-flex;
-    flex-wrap: wrap;
-    height: fit-content;
-    gap: 15px ;
-    justify-content: flex-start;
-    width: 100%;
   }
 }
