--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,13 @@
 
     box-sizing: border-box;
     scroll-snap-type: y mandatory;
-    overflow-y: hidden; 
+    overflow-y: scroll; 
     overflow-x: hidden; 
   
 }
 
 .Main > article {
-    min-height: 100vh;
+    min-height: 99vh;
     height: fit-content;
     width: 100%;
 
