--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,41 +1,32 @@
 .Main {
-    height: fit-content;
-    min-height: inherit;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+  height: fit-content;
+  min-height: inherit;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 
-    box-sizing: border-box;
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll; 
-    overflow-x: hidden; 
-  
+
+  overflow-x: hidden;
+  scroll-snap-type: y mandatory;
 }
 
 .Main > article {
-    min-height: 99vh;
-    height: fit-content;
-    width: 100%;
+  min-height: 100vh;
+  height: fit-content;
+  width: 100%;
+  scroll-snap-align: start;
 
-    margin: 0 auto;
-    
-    box-sizing: border-box;
-    height: fit-content;
-    position: relative;
-    
-    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
-    scroll-snap-align: 0px;
-    z-index: 1;
-    overflow-y: hidden;
-    z-index: 1;
+
+  clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+  z-index: 1;
 
 }
 
-@media screen and (width < 791px){
-    .Main > article {
-        overflow-y: scroll;
-    }
+@media screen and (width < 791px) {
+  .Main > article {
+    overflow-y: scroll;
+  }
 }
