--- a/styles/sections/About.module.css
+++ b/styles/sections/About.module.css
@@ -1,24 +1,35 @@
 .About {
   background: rgb(var(--saphire-blue));
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   position: relative;
   scroll-snap-align: start;
 
-  display: grid;
-  place-items: center;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+
+  padding-top: 100px;
+  overflow-x: hidden;
+  overflow-y:visible;
+
+  box-sizing: border-box;
+
 }
 
 .About > section {
   width: 100%;
   max-width: 1200px;
-  height: 100%;
+  margin-bottom: -100px;
+  height: fit-content;
+
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .SectionTitle {
@@ -28,10 +39,12 @@
   font-size: 51px;
   font-style: normal;
   font-weight: 700;
-  line-height: 48px; /* 94.118% */
+  line-height: 48px;
 
   padding-bottom: 25.5px;
   border-bottom: 1px solid white;
+
+  margin: 0px;
 }
 
 .Content {
@@ -40,17 +53,18 @@
   height: fit-content;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  box-sizing: border-box;
+  padding-top: 2em;
 }
 
 .Image {
-  width: 580.089px;
-  height: 618px;
+  width: 48.33333333vw;
+  height: 48.33333333vw;
+  max-width: 580px;
+  max-height: 580px;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .Image > img {
@@ -60,22 +74,25 @@
   max-height: 500px;
   position: absolute;
   right: 2vw;
-  top: 3vw;
+  top: 2vw;
   border-radius: 5px;
   cursor: pointer;
   transition: ease 0.3s;
+  
 }
 
 .Image > img:hover {
-  right: 1vw;
-  top: 2vw;
+  right: 1.5vw;
+  top: 1.5vw;
+  box-shadow: -1vw 1.25vw 0px white;
   transition: ease 0.3s;
-  box-shadow: -1.5vw 1.7vw 0px white;
 }
 
 .Pattern {
-  width: 139.899px;
-  height: 139.899px;
+  width: 11.5vw;
+  height: 11.5vw;
+  max-width: 139.899px;
+  max-height: 139.899px;
   position: absolute;
   opacity: 1;
 
@@ -95,6 +112,11 @@
 
   border-radius: 5px;
   border: 1px solid var(--white, #fff);
+
+  position: absolute;
+  right: 2.75vw;
+  top: 3vw;
+  z-index: -1;
 }
 
 .Pattern:first-child {
@@ -102,6 +124,7 @@
   left: 0px;
   z-index: -1;
 }
+
 .Pattern:last-child {
   right: 0px;
   bottom: 0px;
@@ -125,6 +148,7 @@
   font-weight: 300;
   line-height: 28.5px; /* 135.714% */
 }
+
 .TechList {
   width: 100%;
   display: flex;
@@ -142,7 +166,6 @@
   flex-direction: row;
   align-items: center;
   margin: 10px 0px;
-
 }
 
 /* .Tech:hover {
@@ -151,7 +174,59 @@
 } */
 
 .Tech > svg {
-    font-size: 30px;
-    margin-right: 15px;
-    color: #64FFDA;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #64ffda;
+}
+
+@media screen and (width < 1275px) {
+  .Content {
+    /* padding-left: 83px; */
+  }
+
+  .About > section {
+    width: 90%;
+  }
+
+  .Description {
+    width: 45%;
+  }
+
+}
+
+@media screen and (width < 792px){
+  .Content {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+
+  .Image{
+    width: 80vw;
+    height: 80vw;
+    margin-bottom: 25px;
+  }
+
+  .Image > img {
+    width: 75vw;
+    height: 75vw;
+    top: 4vw;
+    right: 4vw;
+  }
+
+  .Image > img:hover {
+    top: 2.5vw;
+    right: 2.5vw;
+  }
+
+  .Box {
+    width: 75vw;
+    height: 75vw;
+    top: 5.5vw;
+    right: 5.5vw;
+  }
+
+  .Description{
+    width: 90%;
+  }
 }
