--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -1,10 +1,14 @@
 .Navbar {
   width: 100%;
+  height: fit-content;
+  
   padding: 20px 50px;
   box-sizing: border-box;
+  
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
   align-items: center;
 
   position: fixed;
@@ -13,8 +17,8 @@
   right: 0px;
   margin: 0px auto;
 
-  z-index: 2;
-
+  z-index: 1;
+  
 }
 
 .Navbar.Light {
