--- a/styles/components/Sidebar.module.css
+++ b/styles/components/Sidebar.module.css
@@ -5,12 +5,13 @@
 
 .Side {
   display: none;
-  position: fixed;
+  position: absolute;
   right: 0px;
   top: 0px;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.25); 
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.55); 
+
 }
 
 .Links {
@@ -25,7 +26,6 @@
   text-align: right;
   padding: 16px;
   cursor: default;
-  z-index: 99;
   box-sizing: border-box;
 }
 .Links > li {
