--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,6 @@
   --saphire-blue: 16, 22, 47;
 }
 
-html {
-  scroll-behavior: smooth !important;
-
-}
-
 html,body, #__next {
   width: 100%;
   height: 100%;
@@ -20,5 +15,5 @@ html,body, #__next {
   padding: 0px;
   font-size: 16px;
   box-sizing: border-box;
-  /* overflow: scroll; */ 
+  scroll-behavior: smooth;
 }
