--- a/styles/sections/Welcome.module.css
+++ b/styles/sections/Welcome.module.css
@@ -9,6 +9,8 @@
   place-items: center;
   overflow-x: hidden;
   overflow-y: scroll;
+
+
 }
 
 .Welcome > section {
@@ -28,6 +30,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
 }
 
 .Overview {
@@ -134,6 +137,8 @@
   bottom: 3px;
   left: 3px;
   box-shadow: -3px 3px 0px black;
+  transition: ease 0.3s;
+
 }
 
 .Mail:hover {
