--- a/styles/components/Sidebar.module.css
+++ b/styles/components/Sidebar.module.css
@@ -39,7 +39,7 @@
   font-size: 2rem;
   font-style: normal;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: 175%;
   letter-spacing: -0.03125rem;
   text-decoration: none;
   text-align: right;
@@ -55,4 +55,14 @@
 .Links.None {
   width: 0%;
   display: none;
+}
+
+.LinkDisabled {
+    color: grey;
+}
+
+@media screen and (min-width: 751px) {
+  .SideBar {
+    display: none;
+  }
 }
