--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Karla:wght@100;200;300;400;500;600;700&display=swap");
 
 :root {
+  --green: 71, 204, 160;
   --pale-green: 232, 245, 226;
   --black: 0, 0, 0;
+  --white: 255, 255, 255;
   --beige: 255, 240, 229;
   --saphire-blue: 16, 22, 47;
 }
@@ -11,8 +13,8 @@ html,
 body,
 #__next {
   width: 100%;
-  min-height: 100vh;
-  height: auto;
+  height: 100%;
+  min-height: fit-content;
   padding: 0px;
   margin: 0px;
   -webkit-box-sizing: border-box;
@@ -20,58 +22,81 @@ body,
   box-sizing: border-box;
 }
 
+
+#__next {
+  scroll-snap-type: y mandatory;
+  overflow-x: hidden;
+  overflow-y:auto;
+}
+
+#__next > article {
+  scroll-snap-align: start center end;
+  width: 100%;
+
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  position: relative;
+
+  clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+
+}
+
 /* For screens up to 320px wide (e.g., iPhone 4 & 5) */
 @media screen and (max-width: 320px) {
-  body {
-    font-size: 16px;
+  html {
+    font-size: 12px;
   }
 }
 
 /* For screens between 321px and 767px wide */
 @media screen and (min-width: 321px) and (max-width: 767px) {
-  body {
-    font-size: 18px;
+  html {
+    font-size: 14px;
   }
 }
 
 /* For screens between 768px and 1023px wide (e.g., iPad portrait) */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  body {
-    font-size: 19px;
+  html {
+    font-size: 16px;
   }
 }
 
 /* For screens between 1024px and 1279px wide (e.g., iPad landscape) */
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  body {
+  html {
     font-size: 20px;
   }
 }
 
 /* For screens between 1280px and 1535px wide */
 @media screen and (min-width: 1280px) and (max-width: 1535px) {
-  body {
+  html {
     font-size: 21px;
   }
 }
 
 /* For screens between 1536px and 1919px wide */
 @media screen and (min-width: 1536px) and (max-width: 1919px) {
-  body {
+  html {
     font-size: 23px;
   }
 }
 
 /* For screens between 1920px and 2559px wide */
 @media screen and (min-width: 1920px) and (max-width: 2559px) {
-  body {
+  html {
     font-size: 25px;
   }
 }
 
 /* For screens 2560px and wider */
 @media screen and (min-width: 2560px) {
-  body {
+  html {
     font-size: 25px; /* You can adjust this as desired for larger screens */
   }
 }
