--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -11,6 +11,8 @@
 
   padding: 0px 12px;
 
+  z-index: 5;
+
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -56,9 +58,9 @@
   .Navbar {
     height: fit-content;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1248px;
 
-    padding: 25px 0px 16px 0px;
+    padding: 25px 24px 16px 24px;
     box-sizing: border-box;
   }
 
