--- a/styles/sections/Welcome.module.css
+++ b/styles/sections/Welcome.module.css
@@ -1,6 +1,5 @@
 .Welcome {
   background: rgb(var(--beige));
-  min-height: 895px;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -117,7 +116,6 @@
   transition: ease 0.5s;
 
   position: relative;
-
 }
 
 .ContactList .Contact:hover {
@@ -125,7 +123,6 @@
   left: 3px;
   offset-position: bottom 10px left 20px;
   box-shadow: -5px 5px 0px rgba(0, 0, 0, 1);
-
 }
 
 .Linkedin:hover {
@@ -212,33 +209,56 @@
 .Image img:hover {
   top: 0vw;
   right: 0vw;
-  box-shadow: -1vw 1vw 0px rgba(0, 0, 0, 1);
+  box-shadow: -1.5vw 1.5vw 0px rgba(0, 0, 0, 1);
   outline: solid 3px rgb(var(--black));
 }
 
 @media screen and (min-width: 751px) {
   .Welcome {
     height: 100%;
-
+    width: 100%;
     overflow-y: hidden;
   }
 
   .Welcome section {
     flex-direction: row;
-    max-width: 1200px;
+    justify-content: space-between;
+    max-width: 1248px;
+    width: 100%;
 
-    padding: 0px;
-    padding-top: 80px;
+    padding: 80px 24px 0px 70px;
+  }
+
+  .Overview {
+    width: calc(100% - 44vw);
+    height: auto;
+    box-sizing: border-box;
   }
 
   .Image {
-    max-height: 530px;
-    max-width: 530px;
+    width: 40vw;
+    height: 40vw;
+    max-height: 500px;
+    max-width: 500px;
   }
 
   .Pattern,
   .Image img {
-    max-height: 500px;
-    max-width: 500px;
+    width: 38vw;
+    height: 38vw;
+    max-height: 470px;
+    max-width: 470px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .Welcome section {
+    padding: 80px 24px 0px 24px;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .Welcome {
+    min-height: 600px;
   }
 }
