--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,8 +20,9 @@ body,
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+  scroll-behavior: smooth;
 
+}
 
 #__next {
   scroll-snap-type: y mandatory;
